<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/detail_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_dark"
                android:elevation="10dp"
                android:padding="30dp"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:text="Title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:paddingLeft="30dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/tv_detail_thumbnail"
                    android:layout_width="0dp"
                    android:layout_height="240dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingLeft="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_detail_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:textSize="28sp"
                        android:text="Year" />

                    <TextView
                        android:id="@+id/tv_detail_runtime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:textSize="25sp"
                        android:textStyle="italic"
                        android:text="Runtime"/>

                    <TextView
                        android:id="@+id/tv_detail_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:textStyle="bold"
                        android:text="Rating"/>

                    <CheckedTextView
                        android:id="@+id/check_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/holo_blue_light"
                        android:checkMark="@android:drawable/btn_star"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:textSize="10sp"
                        android:text="MARK AS\nFAVORITE"/>
                </LinearLayout>

            </LinearLayout>
                <TextView
                    android:id="@+id/tv_detail_synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:paddingBottom="16dp"
                    android:text="Synopsis "/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/black"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:textSize="20sp"
                    android:text="@string/trailer"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_detail_trailers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </android.support.v7.widget.RecyclerView>

                    <TextView
                        android:id="@+id/error_trailer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:paddingBottom="16dp"
                        android:text="@string/error_trailer"
                        android:visibility="invisible"/>
                </FrameLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:textSize="20sp"
                    android:text="@string/review"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_detail_reviews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false">
                    </android.support.v7.widget.RecyclerView>

                    <TextView
                        android:id="@+id/error_review"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:paddingBottom="16dp"
                        android:text="@string/error_review"
                        android:visibility="invisible"/>
                </FrameLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pb_detail_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/tv_detail_error_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/no_network"
            android:layout_gravity="center"
            android:visibility="invisible"/>
    </FrameLayout>
</ScrollView>